spacing fix

--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ box-shadow: 0px 0px 30px rgb(198, 200, 201);
 }
 
 img {
-max-width: 288px;
-max-height: 288px;
+width: 288px;
+height: 288px;
 border-radius: 10px;
 padding: 16px 16px 0px 16px;
 
@@ -40,8 +40,7 @@ padding: 16px 16px 0px 16px;
     font-weight: 700;
     letter-spacing: 0px;
     line-height: 120%;
-    
-    
+    padding: 0px;
 }
 
 .sub {
